vh fix for mobile and scrollbar styles

--- a/web/css/layer-categories.css
+++ b/web/css/layer-categories.css
@@ -1,5 +1,5 @@
 /* Categories view */
-.layer-modal-content .categories-nav {
+.categories-nav {
   margin: auto;
   max-width: 960px;
   padding-top: 5px;
